testdata/golden/sema/invalid/fn_type_param_mismatch.sg
// scenario: function type parameter mismatch
fn test_assign(f: fn(int) -> int, g: fn(string) -> int) {
    // Error: cannot assign fn(string) -> int to fn(int) -> int
    let x: fn(int) -> int = g;
}
